# Codeheat

./: .gitignore  HANDOFF.md  README.md  old_feature.py  pyproject.toml
.github/workflows/: codeheat.yml
codeheat/: __init__.py  ci.py  cli.py  duplication.py  insights.py  models.py  ownership.py  static_scan.py
dashboard/: README.md  next.config.mjs  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/sample-data/: ownership_report.json  smell_report.json
dashboard/components/: FileDetail.tsx  Treemap.tsx  UploadDropzone.tsx
dashboard/lib/: merge.ts  treemap.ts  types.ts
tests/: test_ci.py  test_duplication.py  test_insights.py  test_models.py  test_ownership.py  test_static_scan.py
vscode-extension/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts  heatProvider.ts  reports.ts  scan.ts  status.ts
