[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codeheat"
version = "0.1.0"
description = "코드 복잡도 + git 히스토리로 리팩토링 우선순위와 도메인 지식 보유자를 찾는 CLI 툴"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "lizard>=1.17",
    # 진짜 주석만 골라 TODO를 탐지하기 위한 다언어 토크나이저.
    # 없어도 동작하나(라인-앵커 폴백), 문자열 리터럴 속 가짜 주석을 거르려면 필요.
    "pygments>=2.0",
]

[project.optional-dependencies]
# 3단계 anthropic 백엔드용. ollama 백엔드는 stdlib만 쓰므로 추가 설치 불필요.
llm = ["anthropic>=0.40"]
dev = ["pytest>=8"]

[project.scripts]
codeheat = "codeheat.cli:main"

[tool.setuptools.packages.find]
include = ["codeheat*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
